Add spacing around chevron

--- a/assets/application.css
+++ b/assets/application.css
@@ -477,6 +477,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
