Create schema settings and blocks for article page

--- a/assets/application.css
+++ b/assets/application.css
@@ -532,6 +532,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
 }
 
+.block {
+  display: block;
+}
+
 .inline {
   display: inline;
 }
